--- a/src/partials/our-location-modal.html
+++ b/src/partials/our-location-modal.html
@@ -2,7 +2,7 @@
   <div class="location-modal">
     <button class="location-close" type="button" data-modal-close>
       <svg width="24" height="24">
-        <use href="./icons/icons.svg#icon-close"></use>
+        <use href="src/icons/icons.svg#icon-close"></use>
       </svg>
     </button>
     <h2 class="location-modal-header">Our Locations</h2>
@@ -16,6 +16,11 @@
       loading="lazy"
       referrerpolicy="no-referrer-when-downgrade"
     ></iframe>
-    <a class="open-map" href="https://goo.gl/maps/2jdcp2AfNvDhRoU16" target="_blank">Open map</a>
+    <a
+      class="open-map"
+      href="https://goo.gl/maps/2jdcp2AfNvDhRoU16"
+      target="_blank"
+      >Open map</a
+    >
   </div>
 </div>
