--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -7,13 +7,18 @@
         <div class="products-card">
           <h3 class="product-name">ice cream</h3>
           <p class="product-name-description">
-            Soft ice cream with a delicate taste. Made with milk, cream, sugar and natural
-            stabilizer
+            Soft ice cream with a delicate taste. Made with milk, cream, sugar
+            and natural stabilizer
           </p>
         </div>
-        <button id="ice-cream-btn" type="button" class="products-link" data-modal-open="products">
+        <button
+          id="ice-cream-btn"
+          type="button"
+          class="products-link"
+          data-modal-open="products"
+        >
           <svg class="products-arrow" width="40" height="16">
-            <use href="./icons/icons.svg#icon-arrow"></use>
+            <use href="src/icons/icons.svg#icon-arrow"></use>
           </svg>
         </button>
       </li>
@@ -21,13 +26,18 @@
         <div class="products-card">
           <h3 class="product-name">ice coffee</h3>
           <p class="product-name-description">
-            Fragrant invigorating drink created from 100% natural ingredients without the use of
-            preservatives and flavor enhancers
+            Fragrant invigorating drink created from 100% natural ingredients
+            without the use of preservatives and flavor enhancers
           </p>
         </div>
-        <button id="ice-coffe-btn" type="button" class="products-link" data-modal-open="products">
+        <button
+          id="ice-coffe-btn"
+          type="button"
+          class="products-link"
+          data-modal-open="products"
+        >
           <svg class="products-arrow" width="40" height="16">
-            <use href="./icons/icons.svg#icon-arrow"></use>
+            <use href="src/icons/icons.svg#icon-arrow"></use>
           </svg>
         </button>
       </li>
@@ -35,8 +45,8 @@
         <div class="products-card">
           <h3 class="product-name">milkshakes</h3>
           <p class="product-name-description">
-            Sweet drinks based on milk and ice cream, supplemented with syrups, fruits, berries and
-            other sweets of your choice
+            Sweet drinks based on milk and ice cream, supplemented with syrups,
+            fruits, berries and other sweets of your choice
           </p>
         </div>
         <button
@@ -46,7 +56,7 @@
           data-modal-open="products"
         >
           <svg class="products-arrow" width="40" height="16">
-            <use href="./icons/icons.svg#icon-arrow"></use>
+            <use href="src/icons/icons.svg#icon-arrow"></use>
           </svg>
         </button>
       </li>
