--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -8,8 +8,11 @@
       <div class="about-img-circle">
         <img
           class="about-image"
-          src="./images/cow-eating-grass@1x.jpg"
-          srcset="./images/cow-eating-grass@2x.jpg 2x, ./images/cow-eating-grass@1x.jpg 1x"
+          src="src/images/cow-eating-grass@1x.jpg"
+          srcset="
+            src/images/cow-eating-grass@2x.jpg 2x,
+            src/images/cow-eating-grass@1x.jpg 1x
+          "
           alt="Gray cow eating grass"
           width="278"
           height="278"
@@ -18,22 +21,28 @@
       <div class="about-info-block-wrapper">
         <div class="about-paragraph-wrapper">
           <p class="about-paragraph about-first-paragraph">
-            Ice is a place where you will become not only a little happier, but also healthier.
-            Health is the main value for us, and we follow it when creating our handmade desserts.
+            Ice is a place where you will become not only a little happier, but
+            also healthier. Health is the main value for us, and we follow it
+            when creating our handmade desserts.
           </p>
           <p class="about-paragraph about-second-paragraph">
-            We use traditional recipes and 100% natural ingredients. Our products are so natural
-            that they can be given to children from the age of three years. Sweets lovers can expect
-            55 types of ice cream, 15 types of coffee and 23 milkshakes.
+            We use traditional recipes and 100% natural ingredients. Our
+            products are so natural that they can be given to children from the
+            age of three years. Sweets lovers can expect 55 types of ice cream,
+            15 types of coffee and 23 milkshakes.
           </p>
           <p class="about-paragraph about-third-paragraph">
             This is enough to choose ice cream and coffee for any mood!
           </p>
         </div>
-        <button class="btn read-more-btn" type="button" data-modal-open="read-more">
+        <button
+          class="btn read-more-btn"
+          type="button"
+          data-modal-open="read-more"
+        >
           Read more
           <svg class="subscribe-icon" width="12" height="12">
-            <use href="./icons/icons.svg#icon-arrow-btn"></use>
+            <use href="src/icons/icons.svg#icon-arrow-btn"></use>
           </svg>
         </button>
       </div>
