--- a/src/partials/customers.html
+++ b/src/partials/customers.html
@@ -6,40 +6,42 @@
         <li class="customer-review-item swiper-slide">
           <img
             class="customer-image"
-            src="./images/customer1.jpg"
-            srcset="./images/customer1@2x.jpg 2x, ./images/customer1.jpg 1x"
+            src="src/images/customer1.jpg"
+            srcset="src/images/customer1@2x.jpg 2x, src/images/customer1.jpg 1x"
             alt=""
           />
           <p class="customer-review-text">
-            I love visiting your cafe. You prepare the most delicious ice cream in Los Angeles! In
-            addition, you have beautiful serving, cozy atmosphere and polite staff.
+            I love visiting your cafe. You prepare the most delicious ice cream
+            in Los Angeles! In addition, you have beautiful serving, cozy
+            atmosphere and polite staff.
           </p>
           <p class="customer-review-meta-data">Emily, Los Angeles</p>
         </li>
         <li class="customer-review-item swiper-slide">
           <img
             class="customer-image"
-            src="./images/customer2.png"
-            srcset="./images/customer2@2x.png 2x, ./images/customer2.png 1x"
+            src="src/images/customer2.png"
+            srcset="src/images/customer2@2x.png 2x, src/images/customer2.png 1x"
             alt=""
           />
 
           <p class="customer-review-text">
-            Every day we come to you with friends after classes in college. We love your ice cream
-            and casual atmosphere!
+            Every day we come to you with friends after classes in college. We
+            love your ice cream and casual atmosphere!
           </p>
           <p class="customer-review-meta-data">Bryan, New-York</p>
         </li>
         <li class="customer-review-item swiper-slide">
           <img
             class="customer-image"
-            src="./images/customer3.png"
-            srcset="./images/customer3@2x.png 2x, ./images/customer3.png 1x"
+            src="src/images/customer3.png"
+            srcset="src/images/customer3@2x.png 2x, src/images/customer3.png 1x"
             alt=""
           />
           <p class="customer-review-text">
-            Ice cream is my passion! I love your chocolate hazelnut ice cream! And I really like the
-            excellent service - always served politely and quickly!
+            Ice cream is my passion! I love your chocolate hazelnut ice cream!
+            And I really like the excellent service - always served politely and
+            quickly!
           </p>
           <p class="customer-review-meta-data">Diana, Chicago</p>
         </li>
