--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -9,23 +9,35 @@
       <div class="footer-socials">
         <ul class="footer-socials-list">
           <li>
-            <a class="footer-socials-item" href="https://github.com/" target="_blank">
+            <a
+              class="footer-socials-item"
+              href="https://github.com/"
+              target="_blank"
+            >
               <svg width="34" height="34">
-                <use href="./icons/icons.svg#icon-github"></use>
+                <use href="src/icons/icons.svg#icon-github"></use>
               </svg>
             </a>
           </li>
           <li>
-            <a class="footer-socials-item" href="https://telegram.org/" target="_blank">
+            <a
+              class="footer-socials-item"
+              href="https://telegram.org/"
+              target="_blank"
+            >
               <svg width="34" height="34">
-                <use href="./icons/icons.svg#icon-telegram"></use>
+                <use href="src/icons/icons.svg#icon-telegram"></use>
               </svg>
             </a>
           </li>
           <li>
-            <a class="footer-socials-item" href="https://www.facebook.com/" target="_blank">
+            <a
+              class="footer-socials-item"
+              href="https://www.facebook.com/"
+              target="_blank"
+            >
               <svg width="34" height="34">
-                <use href="./icons/icons.svg#icon-facebook"></use>
+                <use href="src/icons/icons.svg#icon-facebook"></use>
               </svg>
             </a>
           </li>
@@ -33,7 +45,11 @@
       </div>
 
       <div class="footer-contact-tel">
-        <p>Feel free to contact<a href="tel:+610383766284"> +61 (0) 383 766 284</a></p>
+        <p>
+          Feel free to contact<a href="tel:+610383766284">
+            +61 (0) 383 766 284</a
+          >
+        </p>
       </div>
     </div>
   </div>
