--- a/src/partials/franchise-modal.html
+++ b/src/partials/franchise-modal.html
@@ -2,15 +2,18 @@
   <div class="franchise-modal-wrapper">
     <button class="franchise-modal-close" data-modal-close>
       <svg width="20" height="20">
-        <use href="./icons/icons.svg#icon-close"></use>
+        <use href="src/icons/icons.svg#icon-close"></use>
       </svg>
     </button>
-    <h2 class="franchise-modal-title">Thank you for your interest in owning an Ice Cream shop</h2>
+    <h2 class="franchise-modal-title">
+      Thank you for your interest in owning an Ice Cream shop
+    </h2>
     <p class="franchise-modal-description">
-      Due to the overwhelming volume of franchise requests we are not accepting new franchisee
-      applications at this time. Once the application process resumes, we will contact you for
-      further information. Please fill out the contact information below and we will reach out for
-      additional information. We appreciate your patience.
+      Due to the overwhelming volume of franchise requests we are not accepting
+      new franchisee applications at this time. Once the application process
+      resumes, we will contact you for further information. Please fill out the
+      contact information below and we will reach out for additional
+      information. We appreciate your patience.
     </p>
     <div>
       <form name="franchise-modal-form" class="franchise-modal-order-form">
@@ -27,7 +30,9 @@
           />
         </div>
         <div class="franchise-modal-input-wrapper">
-          <label for="phonenumber-franchise" class="visually-hidden">Phone</label>
+          <label for="phonenumber-franchise" class="visually-hidden"
+            >Phone</label
+          >
           <input
             class="franchise-modal-input"
             type="tel"
@@ -50,7 +55,9 @@
           />
         </div>
         <div class="franchise-modal-input-wrapper">
-          <label for="clientcomment-franchise" class="visually-hidden">Comment</label>
+          <label for="clientcomment-franchise" class="visually-hidden"
+            >Comment</label
+          >
           <textarea
             class="franchise-modal-input"
             name="clientcomment"
@@ -61,7 +68,9 @@
             wrap="hard"
           ></textarea>
         </div>
-        <button class="franchise-modal-submit-button" type="submit">Submit</button>
+        <button class="franchise-modal-submit-button" type="submit">
+          Submit
+        </button>
       </form>
     </div>
   </div>
