--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -2,7 +2,10 @@
   <div class="container">
     <div class="header-bar">
       <a class="logo" href="./"
-        ><img src="./images/desktop-logo@1x.png" srcset="./images/desktop-logo@2x.png 2x" alt=""
+        ><img
+          src="src/images/desktop-logo@1x.png"
+          srcset="src/images/desktop-logo@2x.png 2x"
+          alt=""
       /></a>
       <nav class="header-navigation">
         <ul class="header-navigation-list">
@@ -28,13 +31,13 @@
           aria-controls="mobile-menu"
         >
           <svg class="burger-icon" width="32" height="32">
-            <use xlink:href="./icons/icons.svg#icon-hamburger"></use>
+            <use xlink:href="../icons/icons.svg#icon-hamburger"></use>
           </svg>
         </button>
         <button class="btn btn-buy" type="button" data-modal-open="buy-now">
           Buy now
           <svg class="btn-icon" width="12" height="12">
-            <use xlink:href="./icons/icons.svg#icon-arrow-btn"></use>
+            <use xlink:href="src/icons/icons.svg#icon-arrow-btn"></use>
           </svg>
         </button>
       </div>
