--- a/src/partials/mobile-menu.html
+++ b/src/partials/mobile-menu.html
@@ -2,7 +2,10 @@
   <div class="container">
     <div class="mobile-menu-top-bar">
       <a class="logo" href="./"
-        ><img src="./images/desktop-logo@1x.png" srcset="./images/desktop-logo@2x.png 2x" alt=""
+        ><img
+          src="src/images/desktop-logo@1x.png"
+          srcset="src/images/desktop-logo@2x.png 2x"
+          alt=""
       /></a>
 
       <button class="close-menu js-close-menu" type="button">
@@ -13,20 +16,24 @@
     </div>
     <nav class="mobile-nav">
       <ul class="mobile-nav-list">
-        <li class="mobile-nav-item"><a href="#page-header" class="mobile-nav-link">Home</a></li>
+        <li class="mobile-nav-item">
+          <a href="#page-header" class="mobile-nav-link">Home</a>
+        </li>
         <li class="mobile-nav-item">
           <a href="#about" class="mobile-nav-link">How it’s made?</a>
         </li>
         <li class="mobile-nav-item">
           <a href="#products" class="mobile-nav-link">Our products</a>
         </li>
-        <li class="mobile-nav-item"><a href="#contacts" class="mobile-nav-link">Contact</a></li>
+        <li class="mobile-nav-item">
+          <a href="#contacts" class="mobile-nav-link">Contact</a>
+        </li>
       </ul>
     </nav>
     <button class="btn-buy" type="button" data-modal-open="buy-now">
       Buy now
       <svg class="btn-icon" width="12" height="12">
-        <use xlink:href="./icons/icons.svg#icon-arrow-btn"></use>
+        <use xlink:href="src/icons/icons.svg#icon-arrow-btn"></use>
       </svg>
     </button>
   </div>
