--- a/src/partials/read-more-modal.html
+++ b/src/partials/read-more-modal.html
@@ -2,7 +2,7 @@
   <div class="read-more-wrapper">
     <button class="read-more-button" type="button" data-modal-close>
       <svg width="20" height="20">
-        <use href="./icons/icons.svg#icon-close"></use>
+        <use href="src/icons/icons.svg#icon-close"></use>
       </svg>
     </button>
     <h2 class="read-more-title">How it's made</h2>
@@ -16,9 +16,9 @@
       allowfullscreen
     ></iframe>
     <p class="read-more-text">
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-      labore et Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-      incididunt ut labore et
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+      tempor incididunt ut labore et Lorem ipsum dolor sit amet, consectetur
+      adipiscing elit, sed do eiusmod tempor incididunt ut labore et
     </p>
   </div>
 </div>
