--- a/src/partials/products-modal.html
+++ b/src/partials/products-modal.html
@@ -2,7 +2,7 @@
   <div class="product-modal-wrapper">
     <button class="product-modal-close" data-modal-close>
       <svg width="20" height="20">
-        <use href="./icons/icons.svg#icon-close"></use>
+        <use href="src/icons/icons.svg#icon-close"></use>
       </svg>
     </button>
     <h2 class="product-modal-title">Chocolate icecream</h2>
@@ -67,7 +67,9 @@
             required
           />
         </div>
-        <label for="clientcomment-product" class="visually-hidden">Comment</label>
+        <label for="clientcomment-product" class="visually-hidden"
+          >Comment</label
+        >
         <div class="product-modal-input-wrapper">
           <textarea
             class="product-modal-input"
@@ -79,7 +81,9 @@
             wrap="hard"
           ></textarea>
         </div>
-        <button class="product-modal-submit-button" type="submit">Submit</button>
+        <button class="product-modal-submit-button" type="submit">
+          Submit
+        </button>
       </form>
     </div>
   </div>
